v3.10.1:
 Users:
    - Fixing an error sorting in the CTF viewer.
    - Improve the fail tolerance when importing tilt-series / tilt-series movies.
    - New protocols added:
        * Invert tilt angles on tilt-series.
        * Apply tomomasks to tomograms.
 Developers:
    - Expand the TCL:
        * For non-deterministic protocols that generates coordinates.
        * To add a tolerance to the checking of oriented coordinates of particles allowing some percentage with
          the identity matrix.
    - Adding delimiter parameter to generate xf files
    - Tomo Viewer applies orientation to the images

v3.10.0:
 Users:
  - Removing unused and old templates
  - sort items in the TS viewer by tsId
 Developers:
  - Update TiltSeries data model to manage properly the even/odd tilt-series as metadata instead of
    independent objects.
  - Update TCL and some test data description.
  - Replace setup.py by the corresponding pyproject.toml

v3.9.2: add tomo course 2024 template --> HIV processing workflow.
v3.9.1:
 Users:
  - Import TomoMasks: it now admits {TS} pattern.
  - Import TS: Improve TS accumulated dose determination when using mdoc.
  - Import Tomograms: exclusion words fixed in import tomograms when not using a pattern.
  - Scipion metadata viewer for SetOfTomograms and SetOfTomoMasks: updated the visible fields and order.
 Developers:
  - Tilt Series class:
     * Fix the clone method --> now it is a literal clone is expected by default instead
       of ignoring some attributes.
     * Fix TS reStack method.
     * Methods applyTSTransform and generateTltFile updated to work with presentAcqOrders.
  - Import TomoMasks refactored.
  - Fixing an error in the compose_TS protocol creating the TS
  - Using the getSize method to get the anglesCount
  - Fix TS motioncor viewer
v3.9.0:
 Users: 
  - Add a protocol for filtering coordinates based on a mask.
  - TS viewer: Adding angles and the transformation matrix information
  - Update napari to v0.4.19