@@ -5,13 +5,14 @@ v3.10.1:
     - New protocols added:
         * Invert tilt angles on tilt-series.
         * Apply tomomasks to tomograms.
+    - Tomo Viewer applies orientation to the images
  Developers:
     - Expand the TCL:
         * For non-deterministic protocols that generates coordinates.
         * To add a tolerance to the checking of oriented coordinates of particles allowing some percentage with
           the identity matrix.
     - Adding delimiter parameter to generate xf files
-    - Tomo Viewer applies orientation to the images
+    - SetOfSubtomogramsBase available to inherit from it in RelionPseudoSubtomograms
 
 v3.10.0:
  Users:
